Rocky_FirstRepository_Category_AplType

--- a/Rocky/Views/ApplicationType/Index.cshtml
+++ b/Rocky/Views/ApplicationType/Index.cshtml
@@ -1,5 +1,6 @@
 ﻿@model IEnumerable<Rocky.Models.ApplicationType>
 
+@*This is a default page for Application Type*@
 <div class="container p-3">
     <div class="row pt-4">
         <div class="col-6">
