--- a/Rocky/Views/Category/Create.cshtml
+++ b/Rocky/Views/Category/Create.cshtml
@@ -1,6 +1,6 @@
 ﻿@model Rocky.Models.Category
 
-<form method="post" asp-action="Create">   
+<form method="post" asp-action="Create">
 
     <div class="border p-3">
         @*<div asp-validation-summary="ModelOnly" class="text-danger"></div>*@
@@ -47,5 +47,10 @@
         </div>
     </div>
 </form>
+
+@section Scripts{
+
+    @{  <partial name="_ValidationScriptsPartial" /> }
+}
 
 
