--- a/Rocky/Views/Category/Index.cshtml
+++ b/Rocky/Views/Category/Index.cshtml
@@ -34,7 +34,16 @@
                     <tr>
                         <td width="50%"> @objCat.Name </td>
                         <td width="30%"> @objCat.DisplayOrder </td>
-                        <td></td>
+                        <td>
+                            <div class="w-75 btn-group" role="group">
+                                <a asp-controller="Category" a asp-route-Id="@objCat.Id" asp-action="Edit" class="btn btn-primary mx-2">
+                                    <i class="far fa-edit"></i>
+                                </a>
+                                <a asp-controller="Category" asp-route-Id="@objCat.Id" asp-action="Delete" class="btn btn-danger mx-2">
+                                    <i class="far fa-trash-alt"></i>
+                                </a>
+                            </div>
+                        </td>
                     </tr>
                 }
             </tbody>
