--- a/Rocky/Views/Category/Index.cshtml
+++ b/Rocky/Views/Category/Index.cshtml
@@ -7,7 +7,7 @@
         </div>
         <div class="col-6 text-right">
             <a asp-controller="Category" asp-action="Create" class="btn btn-primary">
-                Create New Category
+                <i class="fas fa-plus"></i> &nbsp; Create New Category
             </a> 
         </div>
     </div>
